--- a/styles/estilo.css
+++ b/styles/estilo.css
@@ -2,6 +2,7 @@ body
 {
     text-align: center;
     font-family: Arial;
-    color: blue;
-    font-size: 100px;
+    color: red;
+    font-size: 10px;
+
 }
